# EuniGraph

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DATA_AND_API_USAGE.md  LICENSE  Makefile  NOTICE.md  README.md  docker-compose.yml  graph_theory_for_EUNIGRAPH.md  teoria_grafi_per_EUNIGRAPH.md
backend/: README.md  pyproject.toml
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260412_0001_initial_postgres_schema.py  20260413_0002_normalization_tables.py  20260413_0003_coauthorship_graph_builds.py  20260414_0004_publication_embedding_provider.py  20260414_0005_semantic_graph_builds.py
backend/src/eunigraph/: __init__.py  main.py
backend/src/eunigraph/api/: __init__.py  deps.py  openapi.py  router.py
backend/src/eunigraph/api/routers/: admin.py  admin_eunice_seed.py  coauthorship.py  embeddings.py  health.py  normalization.py  organizations.py  publications.py  researchers.py  semantic_graph.py  source_records.py
backend/src/eunigraph/api/schemas/: admin.py  coauthorship.py  common.py  embeddings.py  normalization.py  organizations.py  publications.py  researchers.py  semantic_graph.py  source_records.py
backend/src/eunigraph/core/: __init__.py  config.py  lifecycle.py
backend/src/eunigraph/modules/: README.md  __init__.py
backend/src/eunigraph/shared/: __init__.py  eunice.py  exceptions.py  types.py
backend/tests/unit/: test_catalog_api.py  test_coauthorship.py  test_embeddings.py  test_health.py  test_metadata.py  test_normalization.py  test_openaire_seed.py  test_semantic_graph.py
docs/: architecture.md  (+11 more)
(+130 files in other folders)
